shortened button names, added highscore visibility toggle, fixed tasker stealing control from medium priority raids

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -375,7 +375,7 @@
       "noAllyWarning": "⚠️ No ally creatures on board. Please place at least one ally creature before starting."
     },
     "manualRunner": {
-      "buttonText": "Manual Runner",
+      "buttonText": "Manual",
       "buttonTooltip": "Run manual mode until victory (restarts on defeat)",
       "configTitle": "Manual Runner Configuration",
       "stopWhenLabel": "Stop when:",
@@ -432,10 +432,10 @@
       "modName": "Custom Display",
       "configButtonTooltip": "Custom Display Settings",
       "configTitle": "Custom Display Settings",
-      "perfSectionTitle": "Performance Mode",
-      "perfButtonText": "Performance Mode",
-      "perfButtonTooltipEnabled": "Disable Performance Mode",
-      "perfButtonTooltipDisabled": "Enable Performance Mode",
+      "perfSectionTitle": "Performance",
+      "perfButtonText": "Performance",
+      "perfButtonTooltipEnabled": "Disable Performance",
+      "perfButtonTooltipDisabled": "Enable Performance",
       "showNamesLabel": "Show character names",
       "showHPLabel": "Show HP bars",
       "showHitboxesLabel": "Show hitboxes (non-walkable areas)",
@@ -444,7 +444,7 @@
       "hitboxColorLabel": "Hitbox color:",
       "walkableColorLabel": "Walkable path color:",
       "gridSectionTitle": "Map Grid",
-      "gridButtonText": "Toggle Grid",
+      "gridButtonText": "Grid",
       "gridButtonTooltipEnabled": "Hide Grid",
       "gridButtonTooltipDisabled": "Show Grid",
       "gridColorLabel": "Grid Color:",
@@ -457,8 +457,8 @@
       "title": "Turbo Mode",
       "enabled": "Turbo mode enabled!",
       "disabled": "Turbo mode disabled!",
-      "buttonEnable": "Enable Turbo",
-      "buttonDisable": "Disable Turbo",
+      "buttonEnable": "Turbo",
+      "buttonDisable": "Turbo",
       "buttonTooltip": "Toggle Turbo mode to speed up game ticks",
       "configTitle": "Turbo Settings",
       "configButtonTooltip": "Turbo Settings",
@@ -497,7 +497,7 @@
     },
     "highscore": {
       "title": "Improvement Opportunities",
-      "buttonText": "Highscore Improvements",
+      "buttonText": "Highscores",
       "buttonTooltip": "Show potential tick and rank improvements",
       "yourScore": "Your {score}",
       "topScore": "Top {score}",
